2007-10-23  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Add ncurses-devel to BuildRequires if building with
	  readline support.

	* src/common/pipecmd.h, src/common/pipecmd.c :
	  Added pipecmd_target function to return target hostname from
	  pipecmd object.

	* src/modules/sshcmd.c : Refactor ssh module to use pipecmd.c. 

	* src/modules/sshcmd.c : Add support for connect timeout (-t)
	  to ssh module for openssh using -oConnectTimeout=%d by default.

	* config/ac_ssh.m4 : Add --with-ssh-connect-timeout-option=STRING
	  to ./configure. Allows setting SSH's connect timeout option,
	  "-oConnectTimeout=%d by default", or disabling connect timeout
	  alltogether for SSH with "none".

2007-08-22  Albert Chu <chu11@llnl.gov>

	* src/pdsh/pcp_client.c, src/pdsh/pcp_server.c : Remove
	advertising clause per letter from Berkeley.

2007-06-22  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Redesign of specfile conditionals to allow
	  easier modification of defaults.

	* : tag pdsh-2.14.

2007-06-20  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c : Include SLURM headers after all pdsh
	  includes to avoid redefinition of bool type.

	* configure.ac, config/ac_exec.m4, pdsh.spec, 
	  src/modules/Makefile.am, config/Makefile.am :
	  Allow conditional and static build of "exec" module.

	* : Re-run ./bootstrap.
	  
	* src/pdsh/mod.c : Don't exclude filename member of module 
	  struct when building static modules. Fix for compile error.

	* src/modules/execcmd.c : Fix for static module build.

	* config/ac_exec.m4, configure : Enable "exec" rcmd module
	  by default.

2007-06-07  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.13.

2007-06-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/wcoll.c : 
	  Ignore blank and comment lines in WCOLL file instead of
	  generating warning.

	* src/pdsh/rcmd.c :
	  Add "exec" rcmd method to list of default rcmd modules.

	* scripts/dshbak : 
	  Attempt to compress ranges of hosts when numerically