@@ -206,10 +206,8 @@ for remote execution, stderr of ssh to be folded in with that of the
 remote command.  When invoked by pdcp, it is not possible for ssh to
 prompt for confirmation if a host key changes, prompt for passwords if
 RSA keys are not configured properly, etc..  Finally, the connect
-timeout is not adjustable when ssh is used.
-
-Host range parsing assumes numerical part of hostname is at the end,
-e.g.  specifying foo[0-5]bar will not work.
+timeout is only adjustable with ssh when the underlying ssh implementation
+supports it, and pdsh has been built to use the correct option.
 
 .SH "SEE ALSO"
 pdsh(1)
