@@ -417,6 +417,15 @@ Run command on foo0,foo4,foo5
 
 .fi
 
+A suffix on the hostname is also supported:
+
+.nf
+
+Run command on foo0-eth0,foo1-eth0,foo2-eth0,foo3-eth0
+   pdsh -w foo[0-3]-eth0 command
+
+.fi
+
 As a reminder to the reader, some shells will interpret brackets ('['
 and ']') for pattern matching.  Depending on your shell, it may be
 necessary to enclose ranged lists within quotes.  For example, in
@@ -434,18 +443,17 @@ at LLNL.
 When using \fBssh\fR for remote execution, expect the stderr of ssh to be
 folded in with that of the remote command. When invoked by \fBpdsh\fR, it
 is not possible for \fBssh\fR to prompt for passwords if RSA/DSA keys
-are configured properly, etc.. Additionally, the connect timeout is not 
-adjustable when ssh is used. Finally, there is no reliable way for
-\fBpdsh\fR to ensure that remote commands are actually terminated
-when using a command timeout. Thus if \fI-u\fR is used with \fBssh\fR
-commands may be left running on remote hosts even after timeout
-has killed local \fBssh\fR processes.
+are configured properly, etc..  For \fBssh\fR implementations that suppport
+a connect timeout option, \fBpdsh\fR attempts to use that option to
+enforce the timeout (e.g. -oConnectTimeout=T for OpenSSH), otherwise
+connect timeouts are not supported when using \fBssh\fR.  Finally, there 
+is no reliable way for \fBpdsh\fR to ensure that remote commands are 
+actually terminated when using a command timeout. Thus if \fI-u\fR is 
+used with \fBssh\fR commands may be left running on remote hosts even 
+after timeout has killed local \fBssh\fR processes.
 
 Output from multiple processes per node may be interspersed when using qshell
 or mqshell rcmd modules.
-
-Hostlist parsing assumes numerical part of hostname is at the end only, 
-e.g., specifying foo[0-5]bar will not work.
 
 The number of nodes that \fBpdsh\fR can simultaneously execute remote
 jobs on is limited by the maximum number of threads that can be created
